test/regress/ext:gc/return_call_ref08.bin.wast
(module binary
  "\00\61\73\6d\01\00\00\00\01\97\80\80\80\00\05\60"
  "\00\00\60\00\01\64\00\60\00\01\63\00\60\00\01\64"
  "\70\60\00\01\70\03\8a\80\80\80\00\09\01\02\02\03"
  "\03\04\04\04\04\09\88\80\80\80\00\01\03\00\04\00"
  "\02\04\08\0a\e4\80\80\80\00\09\86\80\80\80\00\00"
  "\d2\00\15\01\0b\86\80\80\80\00\00\d2\00\15\01\0b"
  "\86\80\80\80\00\00\d2\02\15\02\0b\86\80\80\80\00"
  "\00\d2\00\15\01\0b\86\80\80\80\00\00\d2\04\15\03"
  "\0b\86\80\80\80\00\00\d2\00\15\01\0b\86\80\80\80"
  "\00\00\d2\02\15\02\0b\86\80\80\80\00\00\d2\04\15"
  "\03\0b\86\80\80\80\00\00\d2\08\15\04\0b"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8e\80\80\80\00\03\60"
    "\00\00\60\00\01\63\00\60\00\01\64\00\03\83\80\80"
    "\80\00\02\02\01\09\85\80\80\80\00\01\03\00\01\01"
    "\0a\97\80\80\80\00\02\86\80\80\80\00\00\d2\01\15"
    "\01\0b\86\80\80\80\00\00\d2\01\15\01\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8e\80\80\80\00\03\60"
    "\00\00\60\00\01\64\70\60\00\01\64\00\03\83\80\80"
    "\80\00\02\02\01\09\85\80\80\80\00\01\03\00\01\01"
    "\0a\97\80\80\80\00\02\86\80\80\80\00\00\d2\01\15"
    "\01\0b\86\80\80\80\00\00\d2\01\15\01\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8d\80\80\80\00\03\60"
    "\00\00\60\00\01\70\60\00\01\64\00\03\83\80\80\80"
    "\00\02\02\01\09\85\80\80\80\00\01\03\00\01\01\0a"
    "\97\80\80\80\00\02\86\80\80\80\00\00\d2\01\15\01"
    "\0b\86\80\80\80\00\00\d2\01\15\01\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8e\80\80\80\00\03\60"
    "\00\00\60\00\01\64\70\60\00\01\63\00\03\83\80\80"
    "\80\00\02\02\01\09\85\80\80\80\00\01\03\00\01\01"
    "\0a\97\80\80\80\00\02\86\80\80\80\00\00\d2\01\15"
    "\01\0b\86\80\80\80\00\00\d2\01\15\01\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8d\80\80\80\00\03\60"
    "\00\00\60\00\01\70\60\00\01\63\00\03\83\80\80\80"
    "\00\02\02\01\09\85\80\80\80\00\01\03\00\01\01\0a"
    "\97\80\80\80\00\02\86\80\80\80\00\00\d2\01\15\01"
    "\0b\86\80\80\80\00\00\d2\01\15\01\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8a\80\80\80\00\02\60"
    "\00\01\70\60\00\01\64\70\03\83\80\80\80\00\02\01"
    "\00\09\85\80\80\80\00\01\03\00\01\01\0a\97\80\80"
    "\80\00\02\86\80\80\80\00\00\d2\01\15\00\0b\86\80"
    "\80\80\00\00\d2\01\15\00\0b"
  )
  "type mismatch"
)
